cpu-scheduler/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-scheduler
  labels:
    app: cpu-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-scheduler
  template:
    metadata:
      labels:
        app: cpu-scheduler
    spec:
      containers:
        - name: cpu-scheduler
          image: registry-pdc.in.eit.zone/k8s-in/cpu-scheduler:latest
          ports:
            - containerPort: 8080
