cpu-scheduler/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cpu-scheduler
  name: cpu-scheduler
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cpu-scheduler
